--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -1,11 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <!--LOGO DEL CARRITO-->
+    <div class="demo-section" slot="end">
+      <mat-icon matBadge="0" matBadgeColor="primary" [routerLink]="['/carrito']"><ion-icon
+          style="width: 30px; height: 30px; margin-right: 80px;" name="cart-outline"></ion-icon></mat-icon>
+    </div>
     <!--Menu de la busqueda-->
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <!--El buscador-->
-    <ion-searchbar slot="end" animated="true" placeholder="Buscar"></ion-searchbar>
+    <div class="search-container">
+      <ion-searchbar class="center-search" animated="true" placeholder="Buscar"></ion-searchbar>
+    </div>
     <!--este es el menu del usuario-->
     <ion-chip id="popover-button" slot="end" size="90px">
       <ion-avatar>
@@ -36,26 +43,26 @@
     </ion-popover>
   </ion-toolbar>
 </ion-header>
-<!--#############################################PRODUCTOS################################################-->
-<ion-content class="ion-padding">
-  <div class="card-container">
-    <ion-card class="custom-card">
-      <img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="" class="card-image">
-      <ion-card-content class="card-content">
-        <ion-card-title class="titulo">Audifonos gamers rojos con negro</ion-card-title>
-        <br>
-        <p class="subti" style="font-size: 25px;">Precio: $30.000</p>
-        <p class="subti">Descripción:</p>
-        <p>Estos auriculares gamer rojos ofrecen un diseño 
-          llamativo y audaz. Con una apariencia elegante
-           resaltada por el color rojo, brindan un audio 
-           inmersivo, comodidad con almohadillas suaves y
+<!--################################################PRODUCTOS########################################-->
+  <ion-content class="ion-padding">
+    <div class="card-container">
+      <ion-card class="custom-card">
+        <img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="" class="card-image">
+        <ion-card-content class="card-content">
+          <ion-card-title class="titulo">Audifonos gamers rojos con negro</ion-card-title>
+          <br>
+          <p class="subti" style="font-size: 25px;">Precio: $30.000</p>
+          <p class="subti">Descripción:</p>
+          <p>Estos auriculares gamer rojos ofrecen un diseño
+            llamativo y audaz. Con una apariencia elegante
+            resaltada por el color rojo, brindan un audio
+            inmersivo, comodidad con almohadillas suaves y
             ajuste ergonómico. Perfectos para jugadores que
-             buscan estilo y rendimiento en un solo paquete.</p>
+            buscan estilo y rendimiento en un solo paquete.</p>
           <br>
           <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
 
-      </ion-card-content>
-    </ion-card>
-  </div>
-</ion-content>
+        </ion-card-content>
+      </ion-card>
+    </div>
+  </ion-content>
