--- a/src/app/pages/productos/ag5/ag5.page.scss
+++ b/src/app/pages/productos/ag5/ag5.page.scss
@@ -55,7 +55,34 @@ p {
     text-align: left;
     margin: 5px;
 }
-
+//COSA DEL CARRITO::after
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .demo-section + .demo-section {
+    margin-top: 16px;
+  }
+  .demo-section {
+    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
+    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+  }
+  
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  ion-searchbar {
+    width: 400px;
+    text-align: left;
+}
     
 
 @media (max-width: 464px) {
