--- a/src/app/pages/productos/ai1/ai1.page.scss
+++ b/src/app/pages/productos/ai1/ai1.page.scss
@@ -98,3 +98,31 @@ p {
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
+//COSA DEL CARRITO::after
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .demo-section + .demo-section {
+    margin-top: 16px;
+  }
+  .demo-section {
+    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
+    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+  }
+  
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  ion-searchbar {
+    width: 400px;
+    text-align: left;
+}
