--- a/src/app/pages/productos/rd6/rd6.page.scss
+++ b/src/app/pages/productos/rd6/rd6.page.scss
@@ -55,8 +55,7 @@ p {
     text-align: left;
     margin: 5px;
 }
-
-    
+  
 
 @media (max-width: 464px) {
     .custom-card {
@@ -97,4 +96,32 @@ p {
 }
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+}
+//COSA DEL CARRITO::after
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .demo-section + .demo-section {
+    margin-top: 16px;
+  }
+  .demo-section {
+    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
+    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+  }
+  
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  ion-searchbar {
+    width: 400px;
+    text-align: left;
 }
