se agrego el historial, emmm algunas animaciones y no se que mas

--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -64,7 +64,9 @@
   <!--VISTA DEL USUARIO-->
 
   <ion-grid>
-    <ion-card-title>TimeTech Audible</ion-card-title>
+    <ion-card-title style="font-size: 80px;">TimeTech Audible</ion-card-title>
+    <br>
+    <ion-card-title>Audifonos Gamers</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <p [routerLink]="['/ag3']">
@@ -103,8 +105,173 @@
         </ion-card-header>
       </ion-card>
     </p>
-
     </ion-row>
-
   </ion-grid>
+  <ion-grid>
+    <ion-card-title>Audifonos Inalámbricos</ion-card-title>
+    <!--PRIMER PRODUCTO-->
+    <ion-row>
+      <p [routerLink]="['/ai1']">
+        <ion-card>
+          <ion-img src="assets/AUDIFONOS BLUTU/a1.jpg" alt="aqui habia una imagen"></ion-img>
+          <ion-card-header>
+            <ion-card-title class="ion-title">Audifonos Bluetooth<br>morados</ion-card-title>
+            <ion-card-content>
+              <p>$39.990</p>
+            </ion-card-content>
+          </ion-card-header>
+        </ion-card>
+      </p>
+      <!--SEGUNDO PRODUCTO-->
+      <p [routerLink]="['/ai4']">
+        <ion-card>
+          <ion-img src="assets/AUDIFONOS BLUTU/a4.jpg" alt="aqui habia una imagen"></ion-img>
+          <ion-card-header>
+            <ion-card-title class="ion-title">Audifonos Bluetooth<br>azules</ion-card-title>
+            <ion-card-content>
+              <p>$42.000</p>
+            </ion-card-content>
+          </ion-card-header>
+        </ion-card>
+      </p>
+      <!--TERCER PRODUCTO-->
+      <p [routerLink]="['/ai6']">
+        <ion-card>
+          <ion-img src="assets/AUDIFONOS BLUTU/a6.jpg" alt="aqui habia una imagen"></ion-img>
+          <ion-card-header>
+            <ion-card-title class="ion-title">Audifonos Bluetooth<br>verdes</ion-card-title>
+            <ion-card-content>
+              <p>$269.000</p>
+            </ion-card-content>
+          </ion-card-header>
+        </ion-card>
+      </p>
+    </ion-row>
+  </ion-grid>
+  
+  <ion-grid>
+    <ion-card-title>Relojes Analógicos</ion-card-title>
+    <!--PRIMER PRODUCTO-->
+    <ion-row>
+    <p [routerLink]="['/r3']">
+      <ion-card>
+        <ion-img src="assets/RELOJES ANALOGO/r3.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">Reloj Analógico<br>negro con azules</ion-card-title>
+          <ion-card-content>
+            <p>$119.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </p>
+      <!--SEGUNDO PRODUCTO-->
+      <p [routerLink]="['/r4']">
+      <ion-card>
+        <ion-img src="assets/RELOJES ANALOGO/r4.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">Reloj Analógico  <br>negro fondo azul</ion-card-title>
+          <ion-card-content>
+            <p>$194.990</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </p>
+      <!--TERCER PRODUCTO-->
+      <p [routerLink]="['/r5']">
+      <ion-card>
+        <ion-img src="assets/RELOJES ANALOGO/r5.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">Reloj Analógico <br>amarillo con negro</ion-card-title>
+          <ion-card-content>
+            <p>$289.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </p>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid>
+    <ion-card-title>Relojes Digitales</ion-card-title>
+    <ion-row>
+      <!--PRIMER PRODUCTO-->
+      <p [routerLink]="['/rd2']">
+      <ion-card>
+        <ion-img src="assets/digitales/rd2.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">Reloj Digital negro<br> con borde azul</ion-card-title>
+          <ion-card-content>
+            <p>$61.990</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </p>
+      <!--SEGUNDO PRODUCTO-->
+      <p [routerLink]="['/rd5']">
+      <ion-card>
+        <ion-img src="assets/digitales/rd5.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">Reloj Digital<br>negro</ion-card-title>
+          <ion-card-content>
+            <p>$54.000</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </p>
+      <!--TERCER PRODUCTO-->
+      <p [routerLink]="['/rd6']">
+      <ion-card>
+        <ion-img src="assets/digitales/rd6.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-card-header>
+          <ion-card-title class="ion-title">Reloj Digital<br>blanco</ion-card-title>
+          <ion-card-content>
+            <p>$194.550</p>
+          </ion-card-content>
+        </ion-card-header>
+      </ion-card>
+    </p>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-card-title>Relojes Smartwatch</ion-card-title>
+    <!--PRIMER PRODUCTO-->
+    <ion-row>
+      <p [routerLink]="['/rs1']">
+        <ion-card>
+          <ion-img src="assets/SMARTWATCH/rs1.webp" alt="aqui habia una imagen"></ion-img>
+          <ion-card-header>
+            <ion-card-title class="ion-title">Reloj Smartwatch<br>Azul</ion-card-title>
+            <ion-card-content>
+              <p>$139.000</p>
+            </ion-card-content>
+          </ion-card-header>
+        </ion-card>
+      </p>
+      <!--SEGUNDO PRODUCTO-->
+      <p [routerLink]="['/rs3']">
+        <ion-card>
+          <ion-img src="assets/SMARTWATCH/rs2.jpeg" alt="aqui habia una imagen"></ion-img>
+          <ion-card-header>
+            <ion-card-title class="ion-title">Reloj Smartwatch<br>anaranjado</ion-card-title>
+            <ion-card-content>
+              <p>$240.000</p>
+            </ion-card-content>
+          </ion-card-header>
+        </ion-card>
+      </p>
+      <!--TERCER PRODUCTO-->
+      <p [routerLink]="['/rs5']">
+        <ion-card>
+          <ion-img src="assets/SMARTWATCH/rs3.jpeg" alt="aqui habia una imagen"></ion-img>
+          <ion-card-header>
+            <ion-card-title class="ion-title">Reloj Smartwatch<br>morado</ion-card-title>
+            <ion-card-content>
+              <p>$360.000</p>
+            </ion-card-content>
+          </ion-card-header>
+        </ion-card>
+      </p>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
