--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,27 +26,55 @@
         <ion-grid>
           <ion-row>
             <ion-col size="auto">
-              <ion-icon name="watch-outline"></ion-icon>
+              <ion-icon name="stopwatch-outline"></ion-icon>
             </ion-col>
             <ion-col>
               <ion-label [routerLink]="['/relojdig']">Reloj digital.</ion-label>
             </ion-col>
           </ion-row>
         </ion-grid>
-        
+
       </ion-item>
       <ion-item>
-        <ion-label [routerLink]="['/relojsma']">Reloj Smartwatch</ion-label>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="watch-outline"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label [routerLink]="['/relojsma']">Reloj Smartwatch</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+
       </ion-item>
       <!-- SECCION DE LOS AUDIFONOS -->
       <ion-item>
-        <ion-label [routerLink]="['/audiina']">Audifonos con bluetooth</ion-label>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="headset-outline"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label [routerLink]="['/audiina']">Audifonos con bluetooth</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
-      
+
       <ion-item>
-        <ion-label [routerLink]="['/audigamer']">Audifonos Gamers</ion-label>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="headset-outline"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label [routerLink]="['/audigamer']">Audifonos Gamers</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
-      
+
     </ion-content>
   </ion-menu>
   <ion-router-outlet id="menu-content"></ion-router-outlet>
