--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -26,6 +26,10 @@
             </button>
           </mat-form-field>
         </div>
+        <ion-button [routerLink]="['/tienda']"  expand="full" [disabled]="!email.valid" 
+          type="submit">Iniciar sesión</ion-button>
+
+          <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1>
 
       </ion-card-content>
     </ion-card>
