--- a/src/app/pages/inicio/registro/registro.page.html
+++ b/src/app/pages/inicio/registro/registro.page.html
@@ -2,7 +2,7 @@
 </ion-header>
 
 <ion-content class="fondo" [fullscreen]="true">
-  <ion-grid >
+  <ion-grid>
     <ion-row class="center-row">
       <ion-card class="input-card">
         <ion-card-content class="input-container">
@@ -12,7 +12,7 @@
               <!--NOMBRE-->
               <ion-input label="Nombre:" type="text" label-placement="floating" fill="outline" placeholder="Mario"
                 name="nombreU" minlength="3" maxlength="15" required [(ngModel)]="nombreUValue" #nombreUModel="ngModel"
-                 (keydown)="onKeyDowns($event)">
+                (keydown)="onKeyDowns($event)">
               </ion-input>
               <!--VALIDACION-->
               <div class="error-message" *ngIf="nombreUModel.invalid && (nombreUModel.dirty || nombreUModel.touched)">
@@ -21,12 +21,12 @@
                 <p *ngIf="nombreUModel.errors?.['maxlength']">El nombre no debe exceder los 15 caracteres.</p>
               </div>
             </div>
-            
+
             <!--APELLIDO-->
             <div class="input-row">
-              <ion-input label="Apellido:" type="text" label-placement="floating" fill="outline"
-                placeholder="Castillo" name="apellidoU" minlength="3" maxlength="15" required
-                [(ngModel)]="apellidoUValue" #apellidoUModel="ngModel" (keydown)="onKeyDowns($event)"></ion-input>
+              <ion-input label="Apellido:" type="text" label-placement="floating" fill="outline" placeholder="Castillo"
+                name="apellidoU" minlength="3" maxlength="15" required [(ngModel)]="apellidoUValue"
+                #apellidoUModel="ngModel" (keydown)="onKeyDowns($event)"></ion-input>
             </div>
             <!--VALIDACION-->
             <div class="error-message"
@@ -38,7 +38,7 @@
 
             <!--RUT-->
             <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" placeholder="28.999.777-8"
-              name="rutU" minlength="11" maxlength="12" required (keydown)="onKeyDown($event)"  [(ngModel)]="rutUValue"
+              name="rutU" minlength="11" maxlength="12" required (keydown)="onKeyDown($event)" [(ngModel)]="rutUValue"
               #rutUInput="ngModel"></ion-input>
             <!--VALIDACION-->
             <div class="error-message" *ngIf="rutUInput.invalid && (rutUInput.dirty || rutUInput.touched)">
@@ -56,10 +56,12 @@
             <ion-note class="error-message" *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)">
               correo no valido y no puede estar vacío
             </ion-note>
+
+
             <!--CLAVE-->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="******" required [(ngModel)]="password" name="password" #passwordInput="ngModel"
-              minlength="3" maxlength="15" (keydown)="onKeyDown($event)"
+              minlength="3" maxlength="15" (keydown)="onKeyDowns($event)"
               pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&*]).{3,15}$"></ion-input>
             <!--VALIDACION-->
             <div class="error-message" *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)">
@@ -69,15 +71,17 @@
               <p *ngIf="passwordInput.errors?.['pattern']">La contraseña debe contener al menos un número y un carácter
                 especial.</p>
             </div>
+            <!--#########################################################################################################-->
+
             <!--R CLAVE-->
             <ion-input label="Confirmar contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="******" name="cContrasena" required [(ngModel)]="confirmPassword"
-              #confirmPasswordInput="ngModel" (keydown)="onKeyDown($event)"></ion-input>
+              #confirmPasswordInput="ngModel" (keydown)="onKeyDowns($event)"></ion-input>
 
             <!--VALIDACION-->
-            <div class="error-message"
-              *ngIf="confirmPasswordInput.invalid && (confirmPasswordInput.dirty || confirmPasswordInput.touched)">
-              <p *ngIf="confirmPasswordInput.errors?.['required']">Debe confirmar la contraseña.</p>
+            <div class="error-message" *ngIf="confirmPassword !== '' && !validatePasswordMatch()">
+              <p *ngIf="confirmPasswordInput.invalid && confirmPasswordInput.errors?.['required']">Debe confirmar la
+                contraseña.</p>
               <p *ngIf="!validatePasswordMatch()">Las contraseñas no coinciden.</p>
             </div>
 
@@ -110,10 +114,9 @@
             </div>
 
             <!--BOTON-->
-            <ion-button expand="full"
-              [disabled]=" !nombreUModel.valid || !apellidoUModel.valid ||
-           !preguntaUModel.valid || !respuestaUModel.valid ||!emailInput.valid || !passwordInput.valid || !confirmPasswordInput.valid"
-              type="submit">
+            <ion-button expand="full" [disabled]=" !nombreUModel.valid || !apellidoUModel.valid || !preguntaUModel.valid ||
+                         !respuestaUModel.valid ||!emailInput.valid || !passwordInput.valid || 
+                         !confirmPasswordInput.valid" type="submit">
               Registrarse</ion-button>
             <p1 [routerLink]="['/inicio-sesion']"> ¿Ya tienes una cuenta? Inicia sesión aquí</p1><br>
           </form>
