--- a/src/app/pages/Shop/historial/historial.page.html
+++ b/src/app/pages/Shop/historial/historial.page.html
@@ -3,6 +3,7 @@
 </ion-header>
 <!--################################################PRODUCTOS########################################-->
 
+
 <ion-content class="ion-padding">
   <div class="card-container">
     <ion-card class="custom-card">
@@ -11,13 +12,7 @@
         <ion-card-title class="titulo">Audifonos gamers negro con naranja</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $70.000</p>
-        <p class="subti">Descripción:</p>
-        <p>Auriculares gamer en negro con toques anaranjados
-          que ofrecen sonido envolvente, comodidad ergonómica
-          y estilo llamativo. Perfectos para jugadores que valoran
-          tanto el rendimiento como el diseño vibrante.</p>
-        <br>
-        <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
+        <p class="subti">fecha de entrega: (aqui se coloca el pipe)</p>
 
       </ion-card-content>
     </ion-card>
